@@ -9,8 +9,8 @@
 #define _NGINX_H_INCLUDED_
 
 
-#define nginx_version      1000014
-#define NGINX_VERSION      "1.0.14"
+#define nginx_version      1000015
+#define NGINX_VERSION      "1.0.15"
 #define NGINX_VER          "nginx/" NGINX_VERSION
 
 #define NGINX_VAR          "NGINX"
